--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <form action= "http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
          <div>
             <fieldset>
+            </div>
                <h2> My Info </h2>
                <div>
                   <label> First Name:<input type="text" name="first_name_field"></label>
@@ -83,6 +84,7 @@
         <input type="hidden" name="hidden_field" value="jherrera">
       </div>
       <p>
+      <form>
         <input type="submit" value="Send Me">
       </p>
       
